--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "heyday/silverstripe-abtesting",
     "description": "Google Analytics A/B Testing in SilverStripe",
+    "type": "silverstripe-module",
     "authors": [
         {
             "name": "Cam Spiers",
@@ -8,6 +9,18 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": "~3.7",
+        "symfony/class-loader": "~2.2",
+        "silverstripe/framework": "~2.4"
+    },
+    "extra": {
+        "installer-paths": {
+            "sapphire": [
+                "silverstripe/framework"
+            ]
+        },
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
     }
 }
